<resources>
    <string name="app_name">My Kai</string>
    <string name="my_kitchen_assistant">My Kitchen Assistant</string>
    <string name="publish_key">pk_test_51Qko2KEowij4RlG8Ehh3tKQVhxVJUMzAPIi0rTnsX77jwtz5F8LfHfSvS9d2PTg8G7I5NQ3x19JlqdMaAihRcXAn00MvY1CI0X</string>
    <string name="simplify_cooking_meal_planning_and_shopping_all_in_one_place">Simplify cooking, meal planning and\n grocery shopping all in one place</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bit_about_you"><font color="#3C4541"> I’ll need to know a bit </font><font color="#06C169">about you?</font></string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="select_gender">Select Gender</string>
    <string name="what_s_your_name"><font color="#3C4541">What\’s your</font><font color="#06C169"> Name</font></string>
    <string name="choose_your_gender"><font color="#3C4541">Choose your</font><font color="#06C169"> Gender</font></string>
    <string name="meal_routine"><font color="#3C4541">Meal</font><font color="#06C169"> Routine</font></string>
    <string name="meal_routine_desc">What meals do you typically cook at home?</string>
    <string name="cooking_schedule"><font color="#3C4541">Cooking</font><font color="#06C169"> Schedule</font></string>
    <string name="meal_prep_days"><font color="#3C4541">Meal</font><font color="#06C169"> Prep Days</font></string>
    <string name="family_meal_preferences"><font color="#3C4541">Family Meal\n</font><font color="#06C169">Preferences</font></string>
    <string name="select_the_days_you_usually_cook_or_prep_meals">Select the days you usually cook or prep meals</string>
</resources>