<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.commonfragmentscreen.mealRoutine.MealRoutineFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBackMealRoutine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon" />

        <RelativeLayout
            android:id="@+id/rlProgressBar6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgBackMealRoutine"
            android:layout_marginTop="@dimen/_20sdp">

            <ProgressBar
                android:id="@+id/progressBar6"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/tvProgressText"
                android:background="@drawable/progress_bar_background"
                android:indeterminate="false"
                android:padding="1dp"
                android:progressDrawable="@drawable/progress_bar_drawable" />

            <TextView
                android:id="@+id/tvProgressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sarabun_medium"
                android:textColor="@color/light_black" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relMainTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlProgressBar6"
            android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/textAllergensIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/meal_routine"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/textAllergensIngPartner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/meal_prep_days"
            android:textSize="@dimen/_18sdp" />

            <TextView
                android:id="@+id/textAllergensIngFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/family_meal_preferences"
                android:textSize="@dimen/_18sdp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvMealRoutineDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relMainTittle"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/meal_routine_desc"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_15sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyMealRoutine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/tvMealRoutineDesc"
            android:layout_above="@+id/relBottomBtn"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <RelativeLayout
            android:id="@+id/relBottomBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/llBottomBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvSkipBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/outline_green_border_bg"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_10sdp"
                    android:text="Skip"
                    android:textColor="@color/light_green"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/tvNextBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_btn_unselect_background"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_10sdp"
                    android:text="Next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rlUpdateMealRoutine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/green_btn_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="Update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>


</RelativeLayout>