<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/__intro"
    tools:context=".activity.EnterYourNameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageKitchen"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_230sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/main_logo" />

            <TextView
                android:id="@+id/tvAsYourAssistant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageKitchen"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="As your Assistant"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvAboutYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAsYourAssistant"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/bit_about_you"
                android:textSize="@dimen/_13sdp" />

            <RelativeLayout
                android:id="@+id/rlSelectNextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/gray_btn_unselect_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingHorizontal="@dimen/_50sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="Next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAboutYou"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp">

                <TextView
                    android:id="@+id/tvWhatsYourName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/what_s_your_name"
                    android:textSize="@dimen/_15sdp" />

                <RelativeLayout
                    android:id="@+id/relEnterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvWhatsYourName"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circular_edittext_bg">

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:drawableStart="@drawable/user_name_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:fontFamily="@font/poppins"
                        android:gravity="center_vertical"
                        android:hint="@string/enter_your_name"
                        android:maxLength="15"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="#3C4541"
                        android:textColorHint="#3C4541"
                        android:textSize="@dimen/_13sdp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvChooseYourGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relEnterName"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/choose_your_gender"
                    android:textSize="@dimen/_15sdp" />

                <RelativeLayout
                    android:id="@+id/rlSelectGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvChooseYourGender"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/circular_edittext_bg">

                    <TextView
                        android:id="@+id/tvChooseGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:drawableStart="@drawable/gender_icon"
                        android:drawableEnd="@drawable/drop_down_icon"
                        android:drawablePadding="@dimen/_12sdp"
                        android:fontFamily="@font/poppins"
                        android:gravity="center_vertical"
                        android:hint="@string/select_gender"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="#3C4541"
                        android:textColorHint="#3C4541"
                        android:textSize="@dimen/_13sdp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relSelectedGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlSelectGender"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:visibility="gone">

                    <RelativeLayout
                        android:id="@+id/rlSelectMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circular_white_outline_gray_bg">

                        <TextView
                            android:id="@+id/tvSelectMale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:drawablePadding="@dimen/_12sdp"
                            android:fontFamily="@font/poppins"
                            android:gravity="center_vertical"
                            android:padding="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="Male"
                            android:textColor="#3C4541"
                            android:textColorHint="#3C4541"
                            android:textSize="@dimen/_14sdp"
                            app:drawableStartCompat="@drawable/male_icon" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlSelectFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rlSelectMale"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:background="@drawable/circular_white_outline_gray_bg">

                        <TextView
                            android:id="@+id/tvSelectFemale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:drawablePadding="@dimen/_12sdp"
                            android:fontFamily="@font/poppins"
                            android:gravity="center_vertical"
                            android:padding="@dimen/_10sdp"
                            android:singleLine="true"
                            android:text="Female"
                            android:textColor="#3C4541"
                            android:textColorHint="#3C4541"
                            android:textSize="@dimen/_14sdp"
                            app:drawableStartCompat="@drawable/female_icon" />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>