<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.commonfragmentscreen.CookingScheduleFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBackCookingSch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon" />

        <RelativeLayout
            android:id="@+id/rlProgressBar8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgBackCookingSch"
            android:layout_marginTop="@dimen/_20sdp">

            <ProgressBar
                android:id="@+id/progressBar8"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/tvProgressText"
                android:background="@drawable/progress_bar_background"
                android:indeterminate="false"
                android:padding="1dp"
                android:progressDrawable="@drawable/progress_bar_drawable" />

            <TextView
                android:id="@+id/tvProgressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/light_black" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relTittleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlProgressBar8"
            android:layout_marginTop="@dimen/_20sdp">


            <TextView
                android:id="@+id/textCookingSch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/cooking_schedule"
                android:textSize="@dimen/_18sdp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textCookingFamilySch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/meal_prep_days"
                android:visibility="gone"
                android:textSize="@dimen/_18sdp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvCookingSchDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relTittleName"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/select_the_days_you_usually_cook_or_prep_meals"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_13sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcyCookingSch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llBottomBtn"
            android:layout_below="@+id/tvCookingSchDesc"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/llBottomBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvSkipBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/outline_green_border_bg"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="Skip"
                android:textColor="@color/light_green"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvNextBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/gray_btn_unselect_background"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="Next"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>